fix overflowing padding

--- a/styl/main.styl
+++ b/styl/main.styl
@@ -10,7 +10,7 @@
     color black
 
 .repo-icon
-  padding 30%
+  padding 0 30%
   svg
     width 40%
     padding 15% 0
